trunk/Archive2/ab/9b41b7cd2e6f10/output
main.cpp:5:18: warning: explicitly assigning a variable of type 'int' to itself [-Wself-assign]
    int a=0,b=1;a=a;cout <<"I thought I set a=b!"<<b;
                ~^~
main.cpp:5:21: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
    int a=0,b=1;a=a;cout <<"I thought I set a=b!"<<b;
                    ^~~~
                    std::cout
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iostream:61:18: note: 'std::cout' declared here
  extern ostream cout;          /// Linked to standard output
                 ^
1 warning and 1 error generated.
